[package]
name = "dns-server"
version = "0.1.0"
authors = ["Dimitris Traskas <dtraskas.io>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
quote = "1.0.30"
anyhow = "1.0.68"          # error handling
bytes = "1.3.0"            # helps manage buffers
thiserror = "1.0.38"       # error handling
nom = "7.1.3"              # parsing
rand = "0.8.5"             # randomness